# agents-for-smart-life

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  FINAL_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  LICENSE-3rd-party.txt  README.md  SECURITY.md  debug_vision_api.py  nat.code-workspace  pyproject.toml  start.sh  stop.sh  test_langchain_init.py  tools-add.md
examples/HITL/por_to_jiratickets/: README.md  configs  data  pyproject.toml
examples/HITL/por_to_jiratickets/src/nat_por_to_jiratickets/: extract_por_tool.py  hitl_approval_tool.py  jira_tickets_tool.py  register.py
examples/HITL/simple_calculator_hitl/: README.md  configs  pyproject.toml
examples/HITL/simple_calculator_hitl/src/nat_simple_calculator_hitl/: register.py  retry_react_agent.py
examples/MCP/simple_calculator_mcp/: README.md  pyproject.toml
examples/MCP/simple_calculator_mcp/configs/: config-combined.yml  config-mcp-date.yml  config-mcp-math.yml
examples/MCP/simple_calculator_mcp/deploy_external_mcp/: Dockerfile  README.md
examples/RAG/simple_rag/: README.md  pyproject.toml
examples/RAG/simple_rag/configs/: milvus_memory_rag_config.yml  milvus_memory_rag_tools_config.yml  milvus_rag_config.yml  milvus_rag_config_ttc.yml  milvus_rag_tools_config.yml
examples/RAG/simple_rag/deploy/: docker-compose-utils.yaml  docker-compose.yaml
examples/advanced_agents/alert_triage_agent/: README.md  configs  data  pyproject.toml
examples/advanced_agents/alert_triage_agent/src/nat_alert_triage_agent/: categorizer.py  classification_evaluator.py  hardware_check_tool.py  host_performance_check_tool.py  maintenance_check.py  monitoring_process_check_tool.py  playbooks.py  (+8 more)
examples/advanced_agents/alert_triage_agent/tests/: test_alert_triage_agent_workflow.py  test_categorizer.py  test_hardware_check_tool.py  test_host_performance_check_tool.py  test_maintenance_check.py  test_monitoring_process_check_tool.py  test_network_connectivity_check_tool.py  test_run.py  test_telemetry_metrics_host_heartbeat_check_tool.py  test_telemetry_metrics_host_performance_check_tool.py  test_utils.py
examples/advanced_agents/profiler_agent/: README.md  configs  pyproject.toml
examples/advanced_agents/profiler_agent/tests/: test_profiler_agent.py  test_spans.csv
examples/custom_functions/automated_description_generation/: README.md  configs  pyproject.toml
examples/custom_functions/plot_charts/: README.md  configs  data  example_data.json  pyproject.toml
examples/custom_functions/plot_charts/tests/: test_plot_charts_workflow.py
examples/custom_functions/road_scene_analysis/: Dockerfile.example  IMPLEMENTATION.md  MANIFEST.md  QUICKSTART.md  README.md  advanced_analytics.py  api_server.py  config.json  docker-compose.example.yml  example_usage.py  pyproject.toml  requirements.txt  test_api_upload.py  test_road_scene_analysis.py
examples/custom_functions/road_scene_analysis/configs/: config_example.yml
examples/documentation_guides/workflows/text_file_ingest/: configs  data  pyproject.toml
examples/evaluation_and_profiling/email_phishing_analyzer/: Dockerfile  README.md  pyproject.toml
examples/evaluation_and_profiling/email_phishing_analyzer/configs/: config-llama-3.1-8b-instruct.yml  config-llama-3.3-70b-instruct.yml  config-mixtral-8x22b-instruct-v0.1.yml  config-phi-3-medium-4k-instruct.yml  config-phi-3-mini-4k-instruct.yml  config-reasoning.yml  config.yml
examples/evaluation_and_profiling/email_phishing_analyzer/data/: smaller_test.csv
examples/evaluation_and_profiling/email_phishing_analyzer/scripts/: run_phishing_evals_all.sh
examples/evaluation_and_profiling/simple_web_query_eval/: README.md  configs  data  pyproject.toml  scripts
examples/evaluation_and_profiling/simple_web_query_eval/tests/: test_simple_web_query_eval.py
examples/evaluation_and_profiling/swe_bench/: README.md  configs  data  pyproject.toml
examples/evaluation_and_profiling/swe_bench/tests/: test_swe_bench_eval.py
examples/frameworks/agno_personal_finance/: .dockerignore  Dockerfile  README.md  configs  pyproject.toml
examples/frameworks/agno_personal_finance/tests/: test_agno_personal_finance_workflow.py
examples/frameworks/multi_frameworks/: README.md  configs  pyproject.toml
examples/frameworks/multi_frameworks/tests/: test_multi_frameworks_workflow.py
examples/frameworks/semantic_kernel_demo/: README.md  configs  data  pyproject.toml
examples/frameworks/semantic_kernel_demo/tests/: test_semantic_kernel_workflow.py
examples/front_ends/simple_auth/: Dockerfile  README.md  configs  docker-compose.yml  pyproject.toml
examples/front_ends/simple_calculator_custom_routes/: README.md  pyproject.toml
examples/front_ends/simple_calculator_custom_routes/configs/: config-metadata.yml
examples/getting_started/simple_calculator/: Dockerfile  README.md  configs  data  pyproject.toml
examples/getting_started/simple_calculator/tests/: test_simple_calculator_workflow.py  test_tools.py
examples/getting_started/simple_web_query/: Dockerfile  README.md  configs  pyproject.toml
examples/getting_started/simple_web_query/tests/: test_simple_web_query_workflow.py  test_web_query_tool.py
examples/notebooks/first_search_agent/: configs  pyproject.toml
examples/notebooks/retail_sales_agent/: configs  data  pyproject.toml
examples/object_store/user_report/: README.md  pyproject.toml  serialize_file.py  upload_to_minio.sh  upload_to_mysql.sh
examples/object_store/user_report/configs/: config_mem.yml  config_mysql.yml  config_s3.yml
examples/object_store/user_report/tests/: test_user_report_tool.py
examples/observability/redact_pii/: README.md  configs  pyproject.toml
examples/observability/simple_calculator_observability/: README.md  pyproject.toml
examples/observability/simple_calculator_observability/configs/: config-catalyst.yml  config-galileo.yml  config-langfuse.yml  config-langsmith.yml  config-patronus.yml  config-phoenix.yml  config-weave.yml
examples/simple/: pyproject.toml
examples/simple/src/simple/: register.py  simple_function.py
(+763 files in other folders)
