[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_por_to_jiratickets"
dynamic = ["version"]
dependencies = ["nvidia-nat[langchain]~=1.2"]
requires-python = ">=3.11,<3.13"
description = "Custom NeMo Agent toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_por_to_jiratickets = "nat_por_to_jiratickets.register"
