[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_simple_calculator_hitl"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain]~=1.2",
  "nat_simple_calculator",
  "nat_por_to_jiratickets",
]
requires-python = ">=3.11,<3.13"
description = "Simple Calculator Evaluation and Profiling - demonstrates NeMo Agent toolkit evaluation capabilities"
keywords = ["ai", "hitl", "human in the loop", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
nat_simple_calculator = { path = "../../getting_started/simple_calculator", editable = true }
nat_por_to_jiratickets = { path = "../por_to_jiratickets", editable = true }

[project.entry-points.'nat.components']
nat_simple_calculator_hitl = "nat_simple_calculator_hitl.register"
