[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_simple_rag"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[ingestion, langchain, mem0ai]~=1.2"
]
requires-python = ">=3.11,<3.13"
description = "Simple NeMo Agent toolkit Rag example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
