[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_automated_description_generation"
dynamic = ["version"]
dependencies = [
    "nvidia-nat[ingestion, langchain]~=1.2",
]
requires-python = ">=3.11,<3.13"
description = "Automated Generation Description AI-Q example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_automated_description_generation = "nat_automated_description_generation.register"
